# upgmpp

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  README.md.orig  UPGMplusplusConfig.cmake.in
cmake/: FindUPGMplusplus.cmake
examples/MAP_and_marginal_inference/: example.cpp
examples/different_node_types/: example.cpp
examples/local_tests/: example.cpp
examples/pre_computed_weights/: example.cpp
examples/saving_and_loading_graphs/: example.cpp
examples/synthetic_data/: example.cpp
examples/synthetic_scenarios_example/: example.cpp
examples/training_example/: example.cpp
libs/base/: CEdge.hpp  CEdgeType.cpp  CEdgeType.hpp  CGraph.cpp  CGraph.hpp  CMakeLists.txt  CNode.hpp  CNodeType.cpp  CNodeType.hpp  base.hpp  base_utils.cpp  base_utils.hpp
libs/decoding/: CMakeLists.txt  decoding.cpp  decoding.hpp
libs/inference/: CMakeLists.txt  decoding.cpp  decoding.hpp  inference.cpp  inference.hpp  inference_MAP.cpp  inference_MAP.hpp  inference_marginal.cpp  inference_marginal.hpp  inference_utils.cpp  inference_utils.hpp
libs/training/: CMakeLists.txt  CTrainingDataset.cpp  CTrainingDataset.hpp  training.hpp
src/: dataTypes.cpp  dataTypes.h  test.cpp
tests/graph_cuts/: test.cpp
